<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/histGraph"
        android:icon="@drawable/bar_chart"
        android:title="History Graph"
        app:showAsAction="always" />
</menu>